--- a/000-default.conf
+++ b/000-default.conf
@@ -1,5 +1,5 @@
 <VirtualHost 127.0.0.1:8080>
-    ServerAdmin admin@enorion.de
+    ServerAdmin admin@domain.tld
 
     DocumentRoot /var/www/html
 
